tests/snapshots/tests__command__no_binary_name.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cmd=('myprog' 'command' 'set')
