tests/snapshots/tests__command__styles.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_d5f4b1fb'
[32mUsage:[0m [35mmyprog[0m [37m[OPTIONS][0m

[1m[3m[34m[48;2;240;240;240m[58;5;07mOptions:[0m
  [35m-f[0m, [35m--foo[0m[37m [0m[37m<FOO>[0m  It does foo stuff
  [35m-h[0m, [35m--help[0m       Print help
EOF_d5f4b1fb
exit 0
