tests/snapshots/tests__command__subcommand_many.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='subcommand::nested'
claptrap_subcommand_nested_arg3=('one' 'two')
