tests/snapshots/tests__command__subcommand_negates_reqs.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_arg='value'
